[workspace]
members = [
    "daa-chain",
    "daa-economy", 
    "daa-rules",
    "daa-ai",
    "daa-orchestrator",
    "daa-cli",
    "daa-mcp",
    "daa-compute"
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["DAA Team <team@daa.hq>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/daa-hq/daa-sdk"
homepage = "https://daa.hq/"
documentation = "https://docs.rs/daa-sdk"
keywords = ["daa", "blockchain", "qudag", "orchestration", "ai"]
categories = ["cryptography", "web-programming", "development-tools"]

[workspace.dependencies]
# Core Rust dependencies
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
axum = "0.7"
tower = "0.4"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
hex = "0.4"
mockall = "0.12"
reqwest = { version = "0.11", features = ["json"] }
colorful = "0.2"
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.0", features = ["derive"] }
tempfile = "3.8"
once_cell = "1.19"
jsonrpc-core = "18.0"
tokio-tungstenite = "0.21"

# Additional dependencies needed by QuDAG crates
proptest = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }
parking_lot = "0.12"
lru = "0.12"
metrics = "0.21"
rand = "0.8"
rand_core = "0.6"
bincode = "1.3"
blake3 = "1.5"
toml = "0.8"
subtle = "2.5"
zeroize = { version = "1.7", features = ["zeroize_derive"] }
hex-literal = "0.4"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
tokio-test = "0.4"

# QuDAG dependencies  
qudag = { path = "qudag/qudag" }
qudag-crypto = { path = "qudag/core/crypto" }
qudag-dag = { path = "qudag/core/dag" }
qudag-network = { path = "qudag/core/network" }
qudag-protocol = { path = "qudag/core/protocol" }
qudag-exchange = { path = "qudag/qudag-exchange" }
qudag-mcp = { path = "qudag/qudag-mcp" }
# Aliases for compatibility
qudag-core = { path = "qudag/core/crypto" }
qudag-consensus = { path = "qudag/core/dag" }

# DAA internal dependencies
daa-chain = { version = "0.2.0", path = "./daa-chain" }
daa-economy = { version = "0.2.0", path = "./daa-economy" }
daa-rules = { version = "0.2.0", path = "./daa-rules" }
daa-ai = { version = "0.2.0", path = "./daa-ai" }
daa-orchestrator = { version = "0.2.0", path = "./daa-orchestrator" }
daa-cli = { version = "0.2.0", path = "./daa-cli" }
daa-mcp = { version = "0.2.0", path = "./daa-mcp" }
daa-compute = { version = "0.1.0", path = "./daa-compute" }

# Optional async runtime features
[workspace.metadata.features]
default = ["runtime-tokio"]
runtime-tokio = ["tokio"]
runtime-async-std = ["async-std"]
full = ["runtime-tokio", "tracing"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = true
opt-level = 0