[package]
name = "daa-ai"
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "AI integration layer for DAA system with MCP protocol"
repository = "https://github.com/ruvnet/daa"
homepage = "https://github.com/ruvnet/daa"
documentation = "https://docs.rs/daa-ai"
keywords = ["daa", "blockchain", "autonomous", "agents", "ai"]
categories = ["cryptography", "web-programming"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"] }
dashmap = "5.5"
daa-rules = { version = "0.2.0", optional = true }

# QuDAG dependencies - commented out until published
# qudag-crypto = { version = "0.1", optional = true }
# qudag-mcp = { version = "0.1", optional = true }

[features]
default = []
rules-integration = ["daa-rules"]
# Enable these once QuDAG is published:
# qudag = ["qudag-crypto", "qudag-mcp"]
# mcp = ["qudag-mcp"]

