[package]
name = "daa-chain"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "DAA blockchain integration layer with QuDAG network support"

[dependencies]
# Workspace dependencies
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
uuid.workspace = true
tracing.workspace = true

# QuDAG dependencies for blockchain integration
qudag-crypto = { path = "../qudag/core/crypto" }
qudag-network = { path = "../qudag/core/network", optional = true }
qudag-protocol = { path = "../qudag/core/protocol" }
qudag-dag = { path = "../qudag/core/dag", optional = true }

# DAA internal dependencies
daa-rules = { workspace = true, optional = true }

# Blockchain-specific dependencies
blake3 = "1.0"
ed25519-dalek = "2.0"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["network", "consensus"]
network = ["qudag-network"]
consensus = ["qudag-dag"] 
rules-integration = ["daa-rules"]
full = ["network", "consensus", "rules-integration"]