[package]
name = "daa-chain"
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Blockchain abstraction layer for DAA system"
repository = "https://github.com/ruvnet/daa"
homepage = "https://github.com/ruvnet/daa"
documentation = "https://docs.rs/daa-chain"
keywords = ["daa", "blockchain", "autonomous", "agents", "ai"]
categories = ["cryptography", "web-programming"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
hex = "0.4"
async-trait = "0.1"
futures = "0.3"
dashmap = "5.5"
sha2 = "0.10"
blake3 = "1.5"
ed25519-dalek = "2.0"
daa-rules = { version = "0.2.0", optional = true }

# QuDAG dependencies - commented out until published
# qudag-crypto = { version = "0.1", optional = true }
# qudag-network = { version = "0.1", optional = true }
# qudag-protocol = { version = "0.1", optional = true }
# qudag-dag = { version = "0.1", optional = true }

[features]
default = []
rules-bridge = ["daa-rules"]
# Enable these once QuDAG is published:
# qudag = ["qudag-crypto", "qudag-network", "qudag-protocol", "qudag-dag"]
# network = ["qudag-network"]
# consensus = ["qudag-dag"]

