[package]
name = "daa-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "DAA command-line interface with QuDAG network integration"

[[bin]]
name = "daa"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
colorful.workspace = true

# Additional CLI dependencies
dirs = "5.0"
indicatif = "0.17"
console = "0.15"
dialoguer = "0.11"

# Internal DAA dependencies
daa-orchestrator = { workspace = true, optional = true }

[features]
default = ["full"]
full = ["orchestrator"]
orchestrator = ["daa-orchestrator"]

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"