[package]
name = "daa-cli"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Command-line interface for DAA system"
repository = "https://github.com/ruvnet/daa"
homepage = "https://github.com/ruvnet/daa"
documentation = "https://docs.rs/daa-cli"
keywords = ["daa", "blockchain", "autonomous", "agents", "ai"]
categories = ["cryptography", "web-programming"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
colorful = "0.2"
daa-orchestrator = { path = "../daa-orchestrator", features = ["default"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

