[package]
name = "daa-compute"
version = "0.1.0"
edition = "2021"
authors = ["DAA Compute Team"]
description = "Distributed training framework with DiLoCo-style federated SGD"
license = "MIT"
repository = "https://github.com/ruvnet/daa"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# P2P networking
libp2p = { version = "0.53", features = ["kad", "gossipsub", "mdns", "noise", "tcp", "yamux", "websocket", "relay", "identify"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
rand = "0.8"
sha2 = "0.10"
futures = "0.3"
lazy_static = "1.4"

# Time
chrono = { version = "0.4", features = ["serde"] }

# WASM dependencies (only when targeting wasm32)
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"
wasm-logger = "0.2"
getrandom = { version = "0.2", features = ["js"] }

# Web APIs for browser support
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "Element",
    "Performance",
    "Crypto",
    "SubtleCrypto",
    "WebSocket",
    "MessageEvent",
    "CloseEvent",
    "ErrorEvent",
    "RtcPeerConnection",
    "RtcPeerConnectionIceEvent",
    "RtcSdpType",
    "RtcSessionDescription",
    "RtcSessionDescriptionInit",
    "RtcConfiguration",
    "RtcIceServer",
    "RtcDataChannel",
    "RtcDataChannelEvent",
    "MediaStream",
    "MediaStreamTrack",
    "Navigator"
] }

# WebRTC support (with feature flag)
[target.'cfg(all(target_arch = "wasm32", feature = "browser"))'.dependencies]
libp2p-webrtc-websys = "0.1"

# Non-WASM dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libp2p-webrtc = { version = "0.6", features = ["tokio"] }

[dev-dependencies]
tokio-test = "0.4"
proptest = "1.4"
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "training_benchmarks"
harness = false

[features]
default = ["full"]
full = ["gpu-support", "quantum-crypto"]
gpu-support = []
quantum-crypto = []
browser = ["browser-wasm", "wasm-bindgen", "console_error_panic_hook"]
browser-wasm = []
wasm-bindgen = ["uuid/js"]

[profile.wasm]
inherits = "release"
opt-level = "z"      # Optimize for size
lto = true           # Enable Link Time Optimization
codegen-units = 1    # Single codegen unit for smaller binary
panic = "abort"      # Smaller binary
strip = true         # Strip symbols

[package.metadata.wasm-pack]
"wasm-opt" = ["-Os", "--enable-simd"]  # Additional optimizations