[package]
name = "daa-economy"
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Economic engine for DAA system with token management"
repository = "https://github.com/ruvnet/daa"
homepage = "https://github.com/ruvnet/daa"
documentation = "https://docs.rs/daa-economy"
keywords = ["daa", "blockchain", "autonomous", "agents", "ai"]
categories = ["cryptography", "web-programming"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
async-trait = "0.1"
dashmap = "5.5"
rust_decimal = "1.33"
rust_decimal_macros = "1.35"
chrono = { version = "0.4", features = ["serde"] }
num-traits = "0.2"

# QuDAG dependencies - commented out until published
# qudag-crypto = { version = "0.1", optional = true }
# qudag-exchange = { version = "0.1", optional = true }

[features]
default = []
# Enable these once QuDAG is published:
# qudag = ["qudag-crypto", "qudag-exchange"]
# exchange = ["qudag-exchange"]

