[package]
name = "daa-mcp"
version = "0.2.0"
edition = "2021"
authors = ["DAA Team <team@daa.hq>"]
license = "MIT OR Apache-2.0"
description = "Model Context Protocol interface for DAA management and coordination"
repository = "https://github.com/ruvnet/daa"
homepage = "https://github.com/ruvnet/daa"
documentation = "https://docs.rs/daa-mcp"
keywords = ["daa", "mcp", "autonomous", "agents", "protocol"]
categories = ["network-programming", "web-programming"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
async-trait = "0.1"
futures = "0.3"
dashmap = "5.5"
chrono = { version = "0.4", features = ["serde"] }

# DAA SDK dependencies - using published versions from crates.io
daa-orchestrator = "0.2.0"
daa-rules = "0.2.0"
daa-economy = "0.2.0"
daa-ai = "0.2.0"
daa-chain = "0.2.0"

# HTTP server for MCP
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = "1.0"

# WebSocket support
tokio-tungstenite = "0.21"
tungstenite = "0.21"

# JSON-RPC
jsonrpc-core = "18.0"
jsonrpc-derive = "18.0"
jsonrpc-http-server = "18.0"

[features]
default = ["http-transport", "websocket-transport"]
http-transport = []
websocket-transport = []
stdio-transport = []
discovery = []
swarm-coordination = []

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"