[package]
name = "daa-orchestrator"
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Core orchestration engine for DAA system"
repository = "https://github.com/ruvnet/daa"
homepage = "https://github.com/ruvnet/daa"
documentation = "https://docs.rs/daa-orchestrator"
keywords = ["daa", "blockchain", "autonomous", "agents", "ai"]
categories = ["cryptography", "web-programming"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
async-trait = "0.1"
futures = "0.3"
hex = "0.4"
# daa-chain = { version = "0.2.1", optional = true }  # Has compilation errors
daa-economy = { version = "0.2.1", optional = true }
daa-rules = { version = "0.2.1", optional = true }
daa-ai = { version = "0.2.1", optional = true }

# QuDAG dependencies - commented out until published
# qudag-crypto = { version = "0.1", optional = true }
# qudag-protocol = { version = "0.1", optional = true }
# qudag-network = { version = "0.1", optional = true }

[features]
default = ["economy-integration", "rules-integration", "ai-integration"]
# chain-integration = ["daa-chain"]  # Disabled due to compilation errors
economy-integration = ["daa-economy"]
rules-integration = ["daa-rules"]
ai-integration = ["daa-ai"]
# Enable these once QuDAG is published:
# qudag = ["qudag-crypto", "qudag-protocol", "qudag-network"]
# protocol = ["qudag-protocol"]
# network = ["qudag-network"]

