[package]
name = "daa-rules"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Rules engine for DAA system providing policy enforcement and decision automation"

[dependencies]
# Workspace dependencies
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
uuid.workspace = true
tracing.workspace = true

# Rules engine specific dependencies
regex = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Optional scripting support
rhai = { version = "1.0", optional = true }

# Optional database support for rule storage
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"], optional = true }

[features]
default = ["basic"]
basic = []
scripting = ["rhai"]
database = ["sqlx"]
full = ["basic", "scripting", "database"]