[package]
name = "daa-rules"
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/daa-hq/daa-sdk"
homepage = "https://daa.hq/"
documentation = "https://docs.rs/daa-rules"
keywords = ["daa", "blockchain", "rules", "engine", "policy"]
categories = ["cryptography", "web-programming", "development-tools"]
description = "Rules engine for DAA system providing policy enforcement and decision automation"

[dependencies]
# Workspace dependencies
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
tracing = "0.1"
async-trait = "0.1"

# Rules engine specific dependencies
regex = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Optional scripting support
rhai = { version = "1.0", optional = true }

# Optional database support for rule storage
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"], optional = true }

[features]
default = ["basic"]
basic = []
scripting = ["rhai"]
database = ["sqlx"]
full = ["basic", "scripting", "database"]