[workspace]
resolver = "2"
members = [
    "crates/prime-core",
    "crates/prime-dht",
    "crates/prime-trainer",
    "crates/prime-coordinator",
    "crates/prime-cli",
]

[workspace.package]
version = "0.2.1"
edition = "2021"
rust-version = "1.75"
authors = ["Prime Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/example/prime-rust"
homepage = "https://github.com/example/prime-rust"
documentation = "https://docs.rs/prime-rust"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# DAA ecosystem - using published versions
daa-ai = "0.2.1"
daa-rules = "0.2.1"
daa-economy = "0.2.1"
# Note: daa-chain and daa-orchestrator not yet published
# daa-chain = "0.2.1"  
# daa-orchestrator = "0.2.1"

# P2P networking
libp2p = { version = "0.53", features = ["kad", "gossipsub", "mdns", "noise", "tcp", "yamux", "websocket"] }
futures = "0.3"
async-trait = "0.1"

# Machine learning
# tch = "0.13"  # PyTorch bindings - temporarily commented

# Protocol buffers
prost = "0.12"
prost-build = "0.12"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }
config = "0.14"

# Testing
mockall = "0.12"
proptest = "1.4"
quickcheck = "1.0"
quickcheck_macros = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }
arbitrary = { version = "1.3", features = ["derive"] }
test-case = "3.3"
serial_test = "3.0"
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
fake = "2.9"  # For generating test data
wiremock = "0.6"  # For mocking HTTP/network services
test-strategy = "0.3"  # Additional property testing
insta = "1.34"  # Snapshot testing
cargo-husky = "1.5"  # Git hooks for tests

# Additional test dependencies
rand = "0.8"
hex = "0.4"

[profile.test]
opt-level = 2

[profile.bench]
debug = true