[workspace]
members = [
    "qudag",
    "core/crypto",
    "core/dag",
    "core/network",
    "core/protocol",
    "core/vault",
    "tools/cli",
    "qudag-mcp",
    "qudag-wasm",
    "qudag-exchange",
]
resolver = "2"

[workspace.dependencies]
thiserror = "1.0"
tracing = "0.1"
tokio = { version = "1.0", features = ["full"] }
tokio-test = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
proptest = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }
anyhow = "1.0"
futures = "0.3"
blake3 = "1.5"
uuid = { version = "1.0", features = ["v4", "serde"] }
bincode = "1.3"
rand = "0.8"
rand_core = "0.6"
subtle = "2.5"
zeroize = { version = "1.7", features = ["zeroize_derive"] }
metrics = "0.21"
parking_lot = "0.12"
lru = "0.12"
hex-literal = "0.4"
async-trait = "0.1"
toml = "0.8"
hex = "0.4"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }

[workspace.package]
version = "0.4.3"
edition = "2021"
authors = ["rUv <https://github.com/ruvnet>"]
repository = "https://github.com/ruvnet/QuDAG"
license = "MIT OR Apache-2.0"
