[package]
name = "daa-ai"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Core dependencies
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["full"] } 
async-trait.workspace = true
uuid.workspace = true
futures.workspace = true
reqwest = { workspace = true, features = ["json", "stream"] }
bytes = "1.0"
url = "2.0"
tokio-tungstenite = "0.20"
chrono = { workspace = true, features = ["serde"] }

# QuDAG MCP integration
qudag-mcp.workspace = true

# DAA internal dependencies
daa-rules.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tracing-subscriber.workspace = true
mockall.workspace = true