[package]
name = "daa-chain"
version = "0.1.0"
edition = "2021"
authors = ["DAA Team"]
description = "Blockchain I/O abstraction layer for Decentralized Autonomous Applications"
license = "MIT OR Apache-2.0"

[dependencies]
# Core dependencies
async-trait = "0.1"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
log = "0.4"

# QuDAG integration
qudag_network = { version = "0.1", path = "../../qudag/crates/qudag_network" }
qudag_crypto = { version = "0.1", path = "../../qudag/crates/qudag_crypto" }
qudag_core = { version = "0.1", path = "../../qudag/crates/qudag_core" }
qudag_consensus = { version = "0.1", path = "../../qudag/crates/qudag_consensus" }

# Ethereum specific dependencies (for compatibility)
ethers = { version = "2.0", features = ["ws", "rustls"] }
hex = "0.4"

# Common crypto dependencies
sha2 = "0.10"
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"
env_logger = "0.10"