[package]
name = "daa-orchestrator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
thiserror.workspace = true

# Internal dependencies
daa-chain = { path = "../daa-chain" }
daa-economy = { path = "../daa-economy" }
daa-rules = { path = "../daa-rules" }
daa-ai = { path = "../daa-ai" }

# Additional dependencies
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
axum = "0.7"
tower = "0.4"
uuid = { version = "1.6", features = ["v4", "serde"] }