[package]
name = "daa-rules"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
async-trait = "0.1"
uuid.workspace = true
tokio = { workspace = true, features = ["sync", "time"] }
mockall = { workspace = true, optional = true }

[features]
default = []
testing = ["mockall"]

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tracing-subscriber.workspace = true