[package]
name = "prime-rust-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1.3", features = ["derive"] }
serde_json = "1.0"

[dependencies.prime-core]
path = "../crates/prime-core"

[dependencies.prime-dht]
path = "../crates/prime-dht"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "protocol_message_fuzz"
path = "fuzz_targets/protocol_message_fuzz.rs"
test = false
doc = false

[[bin]]
name = "gradient_aggregation_fuzz"
path = "fuzz_targets/gradient_aggregation_fuzz.rs"
test = false
doc = false

[[bin]]
name = "dht_operations_fuzz"
path = "fuzz_targets/dht_operations_fuzz.rs"
test = false
doc = false

[[bin]]
name = "consensus_message_fuzz"
path = "fuzz_targets/consensus_message_fuzz.rs"
test = false
doc = false

[[bin]]
name = "serialization_fuzz"
path = "fuzz_targets/serialization_fuzz.rs"
test = false
doc = false